# high-performance-tiled-matmul

./: CMakeLists.txt  README.md
benchmark/: autotune_demo.cu  benchmark_all.cu
include/: autotune.cuh  common.cuh
include/kernels/: v0_naive.cuh  v1_coalesced.cuh  v2_tiled.cuh  v3_noconflict.cuh  v4_blocktile_1d.cuh  v5_blocktile_2d.cuh  v6_vectorized.cuh  v7_swizzle.cuh  v8_double_buffer.cuh
src/: v0_naive.cu  v1_coalesced.cu  v2_tiled.cu  v3_noconflict.cu  v4_blocktile_1d.cu  v5_blocktile_2d.cu  v6_vectorized.cu  v8_double_buffer.cu
